Fix header enviroment label layout on mobile
Currently headers with envirobment label on mobile overlap the menu
button if it exists.

This is caused by `white-space: nowrap;` on the `.gem-c-header__logo`.

This property doesn't exist in the GOV.UK Design system code and
removing doesn't look to cause any issues.

Fixes #1029

--- a/app/assets/stylesheets/govuk_publishing_components/components/_layout-header.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_layout-header.scss
@@ -19,7 +19,6 @@
 }
 
 .gem-c-header__logo {
-  white-space: nowrap;
   width: auto;
 }
 
